--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 					Application and Web
 					front-end. I constantly follow and experiment modern web and mobile trends to offer professional
 					consulting. Project / team management abilities, I develop software by pushing the most widespread
-					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
+					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC, Cloud Native,
 					Microservices).
 				</p>
 			</div>
@@ -331,7 +331,7 @@
 									their technology choices and development teams. My goal is simple, to excite and
 									inspire Microsoft’s customers
 									<br><br>
-									<b>Technologies:</b> Azure, Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
@@ -365,7 +365,8 @@
 									<br>
 									<b>Description:</b>Engagement management tool
 									<br>
-									<b>Technologies:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular Material
+									<b>Technologies:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular
+									Material
 									<br>
 									<b>Url:</b>
 									<a href="https://github.com/liguori/Engagement-Organizer"
