--- a/it/index.html
+++ b/it/index.html
@@ -215,7 +215,7 @@
 					per offrire il più
 					professionale supporto possibile. Capacità di project / team
 					management, sviluppo software spingendo le più diffuse metodologie e tecniche (Kanban,
-					Agile, Scrum, xP, TDD, DevOps, CI/CD, IaC, Microservizi).
+					Agile, Scrum, xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -334,7 +334,7 @@
 									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
 									semplice, stimolare ed ispirare i clienti Microsoft.
 									<br><br>
-									<b>Tecnologie:</b> Azure, Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
