--- a/it/index.html
+++ b/it/index.html
@@ -334,7 +334,7 @@
 									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
 									semplice, stimolare ed ispirare i clienti Microsoft.
 									<br><br>
-									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
