--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 									their technology choices and development teams. My goal is simple, to excite and
 									inspire Microsoft’s customers
 									<br><br>
-									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
