--- a/index.html
+++ b/index.html
@@ -331,7 +331,9 @@
 									their technology choices and development teams. My goal is simple, to excite and
 									inspire Microsoft’s customers
 									<br><br>
-									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor,
+									Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET
+									Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
@@ -430,12 +432,14 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>-TENDERS/ORDERS MANAGEMENT </b>
+									<b>-IoT MACHINES </b>
 									<br>
-									<b>Description:</b> Development of a portal for the management of tenders and
-									orders.
+									<b>Description:</b> Development of an IoT application that runs on Linux embedded
+									ARM64 based systems based on web technologies. Infrastructure implementation for OTA
+									updates and monitoring (logs, provisioning, etc.) with web portal.
 									<br>
-									<b>Technologies:</b> C#, Javascript, HTML, SQL Server, ASP.NET, WCF, Ext JS
+									<b>Technologies:</b> NodeJS, Javascript, HTML, Angular, Electron, rsyslog, RabbitMQ,
+									ElasticSearch, Logstash, Kibana, Beats, hawkBit, SailsJS
 									<br>
 									<br>
 									<b>-GLASSES E-COMMERCE PORTAL</b>
