--- a/it/index.html
+++ b/it/index.html
@@ -117,7 +117,8 @@
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure Fundamentals"
 							href="https://www.youracclaim.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
-							target="_blank"><img class="badge-cert-shield" src="../img/badge/azure-fundamentals.png"></a>
+							target="_blank"><img class="badge-cert-shield"
+								src="../img/badge/azure-fundamentals.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Programming in C#"
@@ -334,7 +335,9 @@
 									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
 									semplice, stimolare ed ispirare i clienti Microsoft.
 									<br><br>
-									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Database, Monitor, Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework, SQL Server,
+									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor, Bot,
+									Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework,
+									SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
@@ -369,7 +372,8 @@
 									<br>
 									<b>Descrizione:</b>Tool con calendario per la gestione degli ingaggi
 									<br>
-									<b>Tecnologie:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular Material
+									<b>Tecnologie:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular
+									Material
 									<br>
 									<b>Url:</b>
 									<a href="https://github.com/liguori/Engagement-Organizer"
@@ -433,12 +437,14 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>-GESTIONALE GARE/COMMESSE</b>
+									<b>-MACCHINE IoT</b>
 									<br>
-									<b>Descrizione:</b> Sviluppo di un portale per la gestione delle gare e delle
-									commesse.
+									<b>Descrizione:</b> Sviluppo di un'applicazione IoT che funziona su sistemi basati
+									su ARM64, embedded Linux e tecnologie web. Implementazione dell'infrastruttura per
+									aggiornamenti OTA, monitoraggio (registri, provisioning, ecc.) e portale Web.
 									<br>
-									<b>Tecnologie:</b> C#, Javascript, HTML, SQL Server, ASP.NET, WCF, Ext JS
+									<b>Tecnologie:</b> NodeJS, Javascript, HTML, Angular, Electron, rsyslog, RabbitMQ,
+									ElasticSearch, Logstash, Kibana, Beats, hawkBit, SailsJS
 									<br>
 									<br>
 									<b>-PORTALE E-COMMERCE OCCHIALI</b>
