Changed main skills

--- a/index.html
+++ b/index.html
@@ -749,10 +749,10 @@
 					AZURE
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					PHP
+					CONTAINERS
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-3 chart-padding">
-					CMS
+					DEVOPS
 				</div>
 			</div>
 			<!-- end .row -->
