Changed angular references

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 									<br>
 									<b>Description:</b>Engagement management tool
 									<br>
-									<b>Technologies:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular
+									<b>Technologies:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
