--- a/it/index.html
+++ b/it/index.html
@@ -372,7 +372,7 @@
 									<br>
 									<b>Descrizione:</b>Tool con calendario per la gestione degli ingaggi
 									<br>
-									<b>Tecnologie:</b>Angular, ASP.NET Core, Electron, EF Core, SQL Lite, Angular
+									<b>Tecnologie:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
