--- a/index.html
+++ b/index.html
@@ -367,7 +367,8 @@
 									<br>
 									<b>Description:</b>Engagement management tool
 									<br>
-									<b>Technologies:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL Lite, Angular
+									<b>Technologies:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL
+									Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
@@ -528,15 +529,6 @@
 									Report, WebServices REST, Dapper
 									<br>
 									<br>
-									<b>-GECO</b>
-									<br>
-									<b>Description:</b> Development of a software for retail with full accounting
-									management (Transport Documents, Invoices,
-									Credit Notes, Debit Notes, Returns, coupons).
-									<br>
-									<b>Technologies:</b> Windows Form, C#, EntityFramework, SQL Server, Crystal Report
-									<br>
-									<br>
 									<b>-MANAGEMENT SUMMER CENTER</b>
 									<br>
 									<b>Description:</b> Development of a software suite for the management of the summer
@@ -544,32 +536,7 @@
 									payment processing, the attendance register children with the aid of a tablet also
 									used for the digital signature
 									from the parents, the organization of transport, meals and cash management.
-									<br>
-									<b>Technologies:</b> WPF/XAML, C#, EntityFramework, SQL Server, WebServices REST
-									<br>
-									<br>
-									<b>-LO STORE DEL PARTY</b>
-									<br>
-									<b>Description:</b> Development of an e-commerce portal for product management,
-									sales, PayPal payment, shipping and
-									billing of orders relating to products sold by the customer.
-									<br>
-									<b>Technologies:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS,
-									jQuery, SQL Server, WebServices
-									SOAP, Bootstrap
-									<br>
-									<br>
-									<b>-TUTTO IN UNA FESTA</b>
-									<br>
-									<b>Description:</b> Development of a portal for the complete management of a company
-									of animation and for the organization
-									of party: bookin, animators and equipment management, financial return, customer
-									satisfaction and parties and entertainers
-									payments.
-									<br>
-									<b>Technologies:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS,
-									jQuery, SQL Server, WebServices
-									SOAP
+									<b>Technologies:</b> UWP/XAML, C#, EntityFramework, SQL Server, WebServices REST
 								</p>
 							</div>
 						</div>
