--- a/it/index.html
+++ b/it/index.html
@@ -372,7 +372,8 @@
 									<br>
 									<b>Descrizione:</b>Tool con calendario per la gestione degli ingaggi
 									<br>
-									<b>Tecnologie:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL Lite, Angular
+									<b>Tecnologie:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL
+									Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
@@ -537,15 +538,6 @@
 									Report, WebServices REST, Dapper
 									<br>
 									<br>
-									<b>-GECO</b>
-									<br>
-									<b>Descrizione:</b> Sviluppo di un software per la vendita al dettaglio con gestione
-									completa della contabilità (Documenti
-									di Trasporto, Fatture, Note Credito, Note Debito, Resi, Buoni).
-									<br>
-									<b>Tecnologie:</b> Windows Form, C#, EntityFramework, SQL Server, Crystal Report
-									<br>
-									<br>
 									<b>-GESTIONE CENTRO ESTIVO</b>
 									<br>
 									<b>Descrizione:</b> Sviluppo di una suite software per la gestione del centro estivo
@@ -555,32 +547,7 @@
 									digitale da parte dei genitori, l’organizzazione dei trasporti e dei pasti e la
 									gestione delle chiusure cassa.
 									<br>
-									<b>Tecnologie:</b> WPF/XAML, C#, EntityFramework, SQL Server, WebServices REST
-									<br>
-									<br>
-									<b>-LO STORE DEL PARTY</b>
-									<br>
-									<b>Descrizione:</b> Sviluppo ex-novo di un portale di E-Commerce per la gestione dei
-									prodotti, la vendita, pagamento
-									PayPal, spedizione e fatturazione degli ordini inerenti ai prodotti commercializzati
-									dal committente.
-									<br>
-									<b>Tecnologie:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS,
-									jQuery, SQL Server, WebServices
-									SOAP, Bootstrap
-									<br>
-									<br>
-									<b>-TUTTO IN UNA FESTA</b>
-									<br>
-									<b>Descrizione:</b>Sviluppo di un portale per la gestione completa di un’azienda di
-									animazione e per l’organizzazione
-									di party: prenotazione festa, organizzazione animatori ed attrezzature, ritorno
-									economico, customer satisfaction
-									e pagamenti feste ed animatori.
-									<br>
-									<b>Tecnologie:</b> ASP.NET Web Form, Visual Basic.NET, EntityFramework, HTML, CSS,
-									jQuery, SQL Server, WebServices
-									SOAP
+									<b>Tecnologie:</b> UWP/XAML, C#, EntityFramework, SQL Server, WebServices REST
 								</p>
 							</div>
 						</div>
