--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 							<div class="title">
 								<h3>2018 - 2019</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPMENT TEAM LEAD</b>
 									<br>Innovaway s.p.a.</p>
 							</div>
 							<div class="body">
@@ -441,7 +441,7 @@
 							<div class="title">
 								<h3>2016 - 2018</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br>Euris Group s.p.a.</p>
 							</div>
 							<div class="body">
@@ -478,7 +478,7 @@
 							<div class="title">
 								<h3>2008 - 2016</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER, PROJECT MANAGER, CTO</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br> Olikon s.r.l.</p>
 							</div>
 							<div class="body">
@@ -529,7 +529,7 @@
 							<div class="title">
 								<h3>2006 - 2008</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br> AP Informatica s.r.l.</p>
 							</div>
 							<div class="body">
