--- a/it/index.html
+++ b/it/index.html
@@ -417,7 +417,7 @@
 							<div class="title">
 								<h3>2018 - Present</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPMENT TEAM LEAD</b>
 									<br>Innovaway s.p.a.</p>
 							</div>
 							<div class="body">
@@ -445,7 +445,7 @@
 							<div class="title">
 								<h3>2016 - 2018</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br> Gruppo Euris s.p.a.</p>
 							</div>
 							<div class="body">
@@ -484,7 +484,7 @@
 							<div class="title">
 								<h3>2008 - 2016</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER, PROJECT MANAGER, CTO</b>
+									<b>SOFTWARE DEVELOPER, PROJECT MANAGER, CTO</b>
 									<br> Olikon s.r.l.</p>
 							</div>
 							<div class="body">
@@ -539,7 +539,7 @@
 							<div class="title">
 								<h3>2006 - 2008</h3>
 								<p>
-									<b>FULL STACK SOFTWARE DEVELOPER</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br> AP Informatica s.r.l.</p>
 							</div>
 							<div class="body">
