--- a/it/index.html
+++ b/it/index.html
@@ -484,7 +484,7 @@
 							<div class="title">
 								<h3>2008 - 2016</h3>
 								<p>
-									<b>SOFTWARE DEVELOPER, PROJECT MANAGER, CTO</b>
+									<b>SOFTWARE DEVELOPER</b>
 									<br> Olikon s.r.l.</p>
 							</div>
 							<div class="body">
