--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>PREMIER FIELD ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
+							<h3>CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
 										aria-label="Microsoft logo"></span></h3>
 							Lanuage:
 							<a href="#">ENGLISH</a>&nbsp;|&nbsp;
@@ -202,17 +202,17 @@
 				<h2>About me</h2>
 				<span class="border"></span>
 				<p>
-					<span>Full stack web (and not only) developer, with solid back-end attitudes. I love clean and good
-						code. I always care about
-						performances and software engineering. Versatile programmer.</span>
+					<span>Full stack developer, with solid back-end, architecture and infrastructure attitudes. I love
+						clean and good code. I always care about performance and software engineering.</span>
 				</p>
 				<p>
-					I worked for small and big customers using different languages and technologies for Line of Business
-					Application and Web
-					front-end. I constantly follow and experiment modern web and mobile trends to offer professional
-					consulting. Project / team management abilities, I develop software by pushing the most widespread
-					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC, Cloud Native,
-					Microservices).
+					I worked
+					for small and big customers using different languages and technologies for Line of Business
+					Application and Web front-end. I constantly follow and experiment cloud, web, mobile and
+					IoT trends to offer professional consulting.
+					Project / team management abilities, I develop software by pushing the most widespread
+					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
+					Cloud Native, Microservices).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -320,12 +320,12 @@
 							<div class="title">
 								<h3>2019 - Present</h3>
 								<p>
-									<b>PREMIER FIELD ENGINEER</b>
+									<b>CUSTOMER ENGINEER</b>
 									<br><span class="msft">Microsoft</span></p>
 							</div>
 							<div class="body">
 								<p>
-									<b>-PREMIER FIELD ENGINEER</b>
+									<b>-CUSTOMER ENGINEER</b>
 									<br><br>
 									<b>Description:</b> I am responsible for helping our customers get the best from
 									their technology choices and development teams. My goal is simple, to excite and
