--- a/it/index.html
+++ b/it/index.html
@@ -74,8 +74,8 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>PREMIER FIELD ENGINEER @ <span><img class="msft" src="../img/microsoft.svg"
-										alt="Microsoft" aria-label="Microsoft logo"></span></h3>
+							<h3>CUSTOMER ENGINEER @ <span><img class="msft" src="../img/microsoft.svg" alt="Microsoft"
+										aria-label="Microsoft logo"></span></h3>
 							Lingua:
 							<a href="../index.html">ENGLISH</a>&nbsp;|&nbsp;
 							<a href="#">ITALIANO</a>
@@ -204,19 +204,17 @@
 				<h2>Info</h2>
 				<span class="border"></span>
 				<p>
-					<span>Programmatore web full stack (e non solo), con una solida attitudine a lavorare lato back-end.
-						Amo il codice pulito
-						e di qualità. Ho sempre cura delle performance e della progettazione del software. Programmatore
-						versatile.</span>
+					<span>Programmatore full stack, con una solida attitudine a lavorare lato back-end su architettura
+						ed infrastruttura. Amo il codice pulito e di qualità. Ho sempre cura delle performance e della
+						progettazione del software.</span>
 				</p>
 				<p>
-					Ho lavorato per piccoli e grandi clienti usando differenti linguaggi e tecnologie sia per
-					applicazioni business che per il
-					front-end web. Seguo costantemente e sperimento le nuove tendenze riguardanti web moderno e mobile
-					per offrire il più
-					professionale supporto possibile. Capacità di project / team
-					management, sviluppo software spingendo le più diffuse metodologie e tecniche (Kanban,
-					Agile, Scrum, xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi).
+					Ho lavorato per piccoli e grandi clienti usando differenti
+					linguaggi e tecnologie sia per applicazioni business che per il front-end web. Seguo
+					costantemente e sperimento le nuove tendenze riguardanti cloud, web, mobile ed IoT per
+					offrire il più professionale supporto possibile. Capacità di project / team management,
+					sviluppo software spingendo le più diffuse metodologie e tecniche (Kanban, Agile, Scrum,
+					xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi).
 				</p>
 			</div>
 			<!-- end .section-title -->
@@ -324,12 +322,12 @@
 							<div class="title">
 								<h3>2019 - Present</h3>
 								<p>
-									<b>PREMIER FIELD ENGINEER</b>
+									<b>CUSTOMER ENGINEER</b>
 									<br><span class="msft">Microsoft</span></p>
 							</div>
 							<div class="body">
 								<p>
-									<b>-PREMIER FIELD ENGINEER</b>
+									<b>-CUSTOMER ENGINEER</b>
 									<br><br>
 									<b>Descrizione:</b> Sono responsabile nell'aiutare i nostri clienti ad ottenere il
 									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
