--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 				<h2>About me</h2>
 				<span class="border"></span>
 				<p>
-					<span>Full stack developer, with solid back-end, architecture and infrastructure attitudes. I love
+					<span>Full stack developer, with solid architecture and infrastructure attitudes. I love
 						clean and good code. I always care about performance and software engineering.</span>
 				</p>
 				<p>
