--- a/it/index.html
+++ b/it/index.html
@@ -204,7 +204,7 @@
 				<h2>Info</h2>
 				<span class="border"></span>
 				<p>
-					<span>Programmatore full stack, con una solida attitudine a lavorare lato back-end su architettura
+					<span>Programmatore full stack, con una solida attitudine a lavorare su architettura
 						ed infrastruttura. Amo il codice pulito e di qualità. Ho sempre cura delle performance e della
 						progettazione del software.</span>
 				</p>
