--- a/index.html
+++ b/index.html
@@ -206,12 +206,10 @@
 						clean and good code. I always care about performance and software engineering.</span>
 				</p>
 				<p>
-					I worked
-					for small and big customers using different languages and technologies for Line of Business
-					Application and Web front-end. I constantly follow and experiment cloud, web, mobile and
+					I constantly follow and experiment cloud, web, mobile and
 					IoT trends to offer professional consulting.
 					Project / team management abilities, I develop software by pushing the most widespread
-					methodologies and techniques (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
+					methodologies and practices (Kanban, Agile, Scrum, xP, DevOps, TDD, CI/CD, IaC,
 					Cloud Native, Microservices).
 				</p>
 			</div>
