--- a/it/index.html
+++ b/it/index.html
@@ -209,11 +209,9 @@
 						progettazione del software.</span>
 				</p>
 				<p>
-					Ho lavorato per piccoli e grandi clienti usando differenti
-					linguaggi e tecnologie sia per applicazioni business che per il front-end web. Seguo
-					costantemente e sperimento le nuove tendenze riguardanti cloud, web, mobile ed IoT per
+					Seguo costantemente e sperimento le nuove tendenze riguardanti cloud, web, mobile ed IoT per
 					offrire il più professionale supporto possibile. Capacità di project / team management,
-					sviluppo software spingendo le più diffuse metodologie e tecniche (Kanban, Agile, Scrum,
+					sviluppo software spingendo le più diffuse metodologie e pratiche (Kanban, Agile, Scrum,
 					xP, TDD, DevOps, CI/CD, IaC, Cloud Native, Microservizi).
 				</p>
 			</div>
