--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 									inspire Microsoft’s customers
 									<br><br>
 									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor,
-									Bot, Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET
+									Bot, Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
 									Framework, SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
