--- a/it/index.html
+++ b/it/index.html
@@ -332,7 +332,7 @@
 									semplice, stimolare ed ispirare i clienti Microsoft.
 									<br><br>
 									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor, Bot,
-									Cognitive Services, Containers, DevOps), Visual Studio, .NET Core, .NET Framework,
+									Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET Framework,
 									SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
