--- a/it/index.html
+++ b/it/index.html
@@ -74,8 +74,8 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>CUSTOMER ENGINEER @ <span><img class="msft" src="../img/microsoft.svg" alt="Microsoft"
-										aria-label="Microsoft logo"></span></h3>
+							<h3>APP INNOVATION CUSTOMER ENGINEER @ <span><img class="msft" src="../img/microsoft.svg"
+										alt="Microsoft" aria-label="Microsoft logo"></span></h3>
 							Lingua:
 							<a href="../index.html">ENGLISH</a>&nbsp;|&nbsp;
 							<a href="#">ITALIANO</a>
@@ -104,36 +104,36 @@
 				<div class="row certification">
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure DevOps Engineer Expert"
-							href="https://www.youracclaim.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
+							href="https://www.credly.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-devops-engineer-expert.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure Developer Associate"
-							href="https://www.youracclaim.com/badges/2af5e8c6-25ca-420e-90aa-5dae82d5c240"
+							href="https://www.credly.com/badges/ea789b72-af6f-4ed8-8653-b7a2c7234af0"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-developer-associate.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure Fundamentals"
-							href="https://www.youracclaim.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
+							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
 							target="_blank"><img class="badge-cert-shield"
 								src="../img/badge/azure-fundamentals.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Programming in C#"
-							href="https://www.youracclaim.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
+							href="https://www.credly.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
 							target="_blank"><img class="badge-cert-slug" src="../img/badge/programming_c_sharp.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Software Development Fundamentals"
-							href="https://www.youracclaim.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
+							href="https://www.credly.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
 							target="_blank"><img class="badge-cert-slug"
 								src="../img/badge/software-development-fundamentals.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Microsoft Certified Trainer"
-							href="https://www.youracclaim.com/badges/0cdf804e-6d3b-4541-b59e-271b9420af0e"
+							href="https://www.credly.com/badges/0cdf804e-6d3b-4541-b59e-271b9420af0e"
 							target="_blank"><img class="badge-cert-slug"
 								src="../img/badge/MCT-Microsoft_Certified_Trainer-2020-2021.png"></a>
 					</div>
@@ -320,19 +320,19 @@
 							<div class="title">
 								<h3>2019 - Present</h3>
 								<p>
-									<b>CUSTOMER ENGINEER</b>
-									<br><span class="msft">Microsoft</span></p>
+									<b>APP INNOVATION CUSTOMER ENGINEER</b>
+									<br><span class="msft">Microsoft</span>
+								</p>
 							</div>
 							<div class="body">
 								<p>
-									<b>-CUSTOMER ENGINEER</b>
-									<br><br>
 									<b>Descrizione:</b> Sono responsabile nell'aiutare i nostri clienti ad ottenere il
 									meglio dalle loro scelte tecnologiche e dai team di sviluppo. Il mio obiettivo è
 									semplice, stimolare ed ispirare i clienti Microsoft.
 									<br><br>
 									<b>Tecnologie:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor, Bot,
-									Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET Framework,
+									Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
+									Framework,
 									SQL Server,
 									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
@@ -361,27 +361,16 @@
 										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
 									<br>
 									<br>
-									<b>-RAW ORM</b>
+									<b>-SAVINGS PROJECTION</b>
 									<br>
-									<b>Descrizione:</b>Micro implementation di un ORM
+									<b>Descrizione:</b>Proietta le tue entrate nel futuro tenendo conto anche delle
+									spese
 									<br>
-									<b>Tecnologie:</b>Visual Basic
-									<br>
-									<b>Url:</b>
-									<a href="http://github.com/liguori/RawORM"
-										target="_blank">http://github.com/liguori/RawORM</a>
-									<br>
-									<br>
-									<b>-EASY DATA FILE</b>
-									<br>
-									<b>Descrizione:</b> Libreria per l’import/export di dati in file a lunghezza fissa,
-									delimitati, Excel in oggetti tipizzati.
-									<br>
-									<b>Tecnologie:</b> C#, Visual Basic
+									<b>Tecnologie:</b>Blazor, ASP.NET Core, EF Core and Electron
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/EasyDataFile"
-										target="_blank">https://github.com/liguori/EasyDataFile</a>
+									<a href="https://github.com/liguori/savings-projection"
+										target="_blank">https://github.com/liguori/savings-projection</a>
 									<br>
 									<br>
 									<b>-CHESSBOARD PLUS</b>
@@ -414,7 +403,8 @@
 								<h3>2018 - Present</h3>
 								<p>
 									<b>SOFTWARE DEVELOPMENT TEAM LEAD</b>
-									<br>Innovaway s.p.a.</p>
+									<br>Innovaway s.p.a.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -442,7 +432,8 @@
 								<h3>2016 - 2018</h3>
 								<p>
 									<b>SOFTWARE DEVELOPER</b>
-									<br> Gruppo Euris s.p.a.</p>
+									<br> Gruppo Euris s.p.a.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -481,7 +472,8 @@
 								<h3>2008 - 2016</h3>
 								<p>
 									<b>SOFTWARE DEVELOPER</b>
-									<br> Olikon s.r.l.</p>
+									<br> Olikon s.r.l.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -536,7 +528,8 @@
 								<h3>2006 - 2008</h3>
 								<p>
 									<b>SOFTWARE DEVELOPER</b>
-									<br> AP Informatica s.r.l.</p>
+									<br> AP Informatica s.r.l.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -587,7 +580,8 @@
 								<h3>2003 - 2008</h3>
 								<p>
 									<b>DIPLOMA DI SCUOLA SUPERIORE</b>
-									<br>C.A. Dalla Chiesa</p>
+									<br>C.A. Dalla Chiesa
+								</p>
 							</div>
 							<div class="body">
 								<p>
