--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
+							<h3>APP INNOVATION CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
 										aria-label="Microsoft logo"></span></h3>
 							Lanuage:
 							<a href="#">ENGLISH</a>&nbsp;|&nbsp;
@@ -104,35 +104,35 @@
 				<div class="row certification">
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure DevOps Engineer Expert"
-							href="https://www.youracclaim.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
+							href="https://www.credly.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-devops-engineer-expert.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure Developer Associate"
-							href="https://www.youracclaim.com/badges/2af5e8c6-25ca-420e-90aa-5dae82d5c240"
+							href="https://www.credly.com/badges/ea789b72-af6f-4ed8-8653-b7a2c7234af0"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-developer-associate.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Azure Fundamentals"
-							href="https://www.youracclaim.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
+							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
 							target="_blank"><img class="badge-cert-shield" src="img/badge/azure-fundamentals.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Programming in C#"
-							href="https://www.youracclaim.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
+							href="https://www.credly.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
 							target="_blank"><img class="badge-cert-slug" src="img/badge/programming_c_sharp.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Software Development Fundamentals"
-							href="https://www.youracclaim.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
+							href="https://www.credly.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/software-development-fundamentals.png"></a>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<a title="Microsoft Certified Trainer"
-							href="https://www.youracclaim.com/badges/0cdf804e-6d3b-4541-b59e-271b9420af0e"
+							href="https://www.credly.com/badges/0cdf804e-6d3b-4541-b59e-271b9420af0e"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/MCT-Microsoft_Certified_Trainer-2020-2021.png"></a>
 					</div>
@@ -318,13 +318,11 @@
 							<div class="title">
 								<h3>2019 - Present</h3>
 								<p>
-									<b>CUSTOMER ENGINEER</b>
+									<b>APP INNOVATION CUSTOMER ENGINEER</b>
 									<br><span class="msft">Microsoft</span></p>
 							</div>
 							<div class="body">
 								<p>
-									<b>-CUSTOMER ENGINEER</b>
-									<br><br>
 									<b>Description:</b> I am responsible for helping our customers get the best from
 									their technology choices and development teams. My goal is simple, to excite and
 									inspire Microsoft’s customers
@@ -359,27 +357,15 @@
 										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
 									<br>
 									<br>
-									<b>-RAW ORM</b>
+									<b>-SAVINGS PROJECTION</b>
 									<br>
-									<b>Description:</b>Micro implementation of an ORM
+									<b>Description:</b> Project your income into the future while also taking expenses into account
 									<br>
-									<b>Technologies:</b>Visual Basic
-									<br>
-									<b>Url:</b>
-									<a href="http://github.com/liguori/RawORM"
-										target="_blank">http://github.com/liguori/RawORM</a>
-									<br>
-									<br>
-									<b>-EASY DATA FILE</b>
-									<br>
-									<b>Description:</b> Library for import / export of data in fixed-length files,
-									delimited, Excel typed objects.
-									<br>
-									<b>Technologies:</b> C#, Visual Basic
+									<b>Technologies:</b> Blazor, ASP.NET Core, EF Core and Electron
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/EasyDataFile"
-										target="_blank">https://github.com/liguori/EasyDataFile</a>
+									<a href="https://github.com/liguori/savings-projection"
+										target="_blank">https://github.com/liguori/savings-projection</a>
 									<br>
 									<br>
 									<b>-CHESSBOARD PLUS</b>
