--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>APP INNOVATION CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg" alt="Microsoft"
-										aria-label="Microsoft logo"></span></h3>
+							<h3>APP INNOVATION CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg"
+										alt="Microsoft" aria-label="Microsoft logo"></span></h3>
 							Lanuage:
 							<a href="#">ENGLISH</a>&nbsp;|&nbsp;
 							<a href="./it/index.html">ITALIANO</a>
@@ -319,7 +319,8 @@
 								<h3>2019 - Present</h3>
 								<p>
 									<b>APP INNOVATION CUSTOMER ENGINEER</b>
-									<br><span class="msft">Microsoft</span></p>
+									<br><span class="msft">Microsoft</span>
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -359,7 +360,8 @@
 									<br>
 									<b>-SAVINGS PROJECTION</b>
 									<br>
-									<b>Description:</b> Project your income into the future while also taking expenses into account
+									<b>Description:</b> Project your income into the future while also taking expenses
+									into account
 									<br>
 									<b>Technologies:</b> Blazor, ASP.NET Core, EF Core and Electron
 									<br>
@@ -398,7 +400,8 @@
 								<h3>2018 - 2019</h3>
 								<p>
 									<b>SOFTWARE DEVELOPMENT TEAM LEAD</b>
-									<br>Innovaway s.p.a.</p>
+									<br>Innovaway s.p.a.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -425,8 +428,9 @@
 							<div class="title">
 								<h3>2016 - 2018</h3>
 								<p>
-									<b>SOFTWARE DEVELOPER</b>
-									<br>Euris Group s.p.a.</p>
+									<b>SENIOR SOFTWARE DEVELOPER</b>
+									<br>Euris Group s.p.a.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -462,8 +466,9 @@
 							<div class="title">
 								<h3>2008 - 2016</h3>
 								<p>
-									<b>SOFTWARE DEVELOPER</b>
-									<br> Olikon s.r.l.</p>
+									<b>SENIOR SOFTWARE DEVELOPER</b>
+									<br> Olikon s.r.l.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -476,7 +481,7 @@
 									Server, WebServices SOAP
 									<br>
 									<br>
-									<b> -GERIMOBILE</b>
+									<b>-GERIMOBILE</b>
 									<br>
 									<b>Description:</b> Development of a software for acquiring water / gas /
 									electricity counters data using tablet devices.
@@ -484,24 +489,22 @@
 									<b>Technologies:</b> Windows Mobile, C#, SQL Serve CE
 									<br>
 									<br>
-									<b>-SUITE ANUTEL - ACCERTA TU / GEDAT</b>
+									<b>-TAX ASSESSMENT</b>
 									<br>
 									<b>Description:</b> Development of a software suite intended for municipality and
-									used by over 700 institutions throughout
-									Italy for the reading of the databases provided by the revenue authorities to the
-									intersection of information and
-									the search for taxpayers tax avoiders / evaders, cleaning up of management databases
-									IMU / internal TARES and for
-									the verification of the collection was.
+									used by over 700 institutions throughout Italy for the reading of the databases
+									provided by the revenue authorities to the intersection of information and the
+									search for taxpayers tax avoiders / evaders, cleaning up of management tax databases
+									(personal data, buildings, waste) and check on the status of tax collection.
 									<br>
 									<b>Technologies:</b> Windows Form, Visual Basic.NET, SQL Server, Access, Crystal
 									Report, WebServices REST, Dapper
 									<br>
 									<br>
-									<b>-MANAGEMENT SUMMER CENTER</b>
+									<b>-SUMMER CAMP MANAGER</b>
 									<br>
 									<b>Description:</b> Development of a software suite for the management of the summer
-									center which provided: registration,
+									camp which provided: registration,
 									payment processing, the attendance register children with the aid of a tablet also
 									used for the digital signature
 									from the parents, the organization of transport, meals and cash management.
@@ -514,7 +517,8 @@
 								<h3>2006 - 2008</h3>
 								<p>
 									<b>SOFTWARE DEVELOPER</b>
-									<br> AP Informatica s.r.l.</p>
+									<br> AP Informatica s.r.l.
+								</p>
 							</div>
 							<div class="body">
 								<p>
@@ -565,7 +569,8 @@
 								<h3>2003 - 2008</h3>
 								<p>
 									<b>HIGH SCHOOL DIPLOMA</b>
-									<br>C.A. Dalla Chiesa</p>
+									<br>C.A. Dalla Chiesa
+								</p>
 							</div>
 							<div class="body">
 								<p>
