--- a/it/index.html
+++ b/it/index.html
@@ -431,7 +431,7 @@
 							<div class="title">
 								<h3>2016 - 2018</h3>
 								<p>
-									<b>SOFTWARE DEVELOPER</b>
+									<b>SENIOR SOFTWARE DEVELOPER</b>
 									<br> Gruppo Euris s.p.a.
 								</p>
 							</div>
@@ -471,13 +471,13 @@
 							<div class="title">
 								<h3>2008 - 2016</h3>
 								<p>
-									<b>SOFTWARE DEVELOPER</b>
+									<b>SENIOR SOFTWARE DEVELOPER</b>
 									<br> Olikon s.r.l.
 								</p>
 							</div>
 							<div class="body">
 								<p>
-									<b>- GERIWEB</b>
+									<b>-GERIWEB</b>
 									<br>
 									<b>Descrizione:</b> Sviluppo di un software per la fatturazione dei consumi
 									idrico/gas/elettricità. Il software prevedeva
@@ -487,7 +487,7 @@
 									Server, WebServices SOAP
 									<br>
 									<br>
-									<b> -GERIMOBILE</b>
+									<b>-GERIMOBILE</b>
 									<br>
 									<b>Descrizione:</b> Sviluppo di un software per palmari / tablet per la lettura dei
 									contatori.
@@ -495,7 +495,7 @@
 									<b>Tecnologie:</b> Windows Mobile, C#, SQL Serve CE
 									<br>
 									<br>
-									<b>-SUITE ANUTEL - ACCERTA TU / GEDAT</b>
+									<b>-ACCERTIAMO</b>
 									<br>
 									<b>Descrizione:</b> Sviluppo di una suite software destinati ai comuni ed utilizzata
 									da oltre
