--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 						</div>
 						<!-- end .info-title -->
 						<div class="info-details">
-							<p>: 01 feb 1990</p>
-							<p>: gianluigiliguori@live.it</p>
-							<p>: http://liguori.js.org/</p>
+							<p> 01 feb 1990</p>
+							<p> gianluigiliguori@live.it</p>
+							<p> https://liguori.github.io</p>
 						</div>
 						<!-- end .info-details -->
 						<p class="about-signature">Gianluigi Liguori</p>
