Update for Blazor

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 									<b>Technologies:</b> Azure (IaaS, Paas, Serverless, Identity, Database, Monitor,
 									Bot, Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
 									Framework, SQL Server,
-									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
+									C#, VB.NET, Blazor, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
 							</div>
