--- a/it/index.html
+++ b/it/index.html
@@ -334,7 +334,7 @@
 									Cognitive Services, Containers, DevOps), GitHub, Visual Studio, .NET Core, .NET
 									Framework,
 									SQL Server,
-									C#, VB.NET, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
+									C#, VB.NET, Blazor, ASP.NET, EntityFramework, WCF, WPF, Windows Forms
 									<br>
 								</p>
 							</div>
