--- a/index.html
+++ b/index.html
@@ -102,40 +102,46 @@
 					<!-- end .col-md-12 -->
 				</div>
 				<div class="row certification">
-					<div class="col-md-2 col-xs-4">
+					<span >
+						<a title="Azure Administrator Associate"
+							href="https://www.credly.com/badges/8b315b60-077f-4a2b-975a-9f0c410acdf3"
+							target="_blank"><img class="badge-cert-shield"
+								src="img/badge/azure-administrator-associate.png"></a>
+					</span>
+					<span >
 						<a title="Azure DevOps Engineer Expert"
 							href="https://www.credly.com/badges/219e56d9-0332-469c-b631-a43880772b7e"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-devops-engineer-expert.png"></a>
-					</div>
-					<div class="col-md-2 col-xs-4">
+					</span>
+					<span >
 						<a title="Azure Developer Associate"
 							href="https://www.credly.com/badges/ea789b72-af6f-4ed8-8653-b7a2c7234af0"
 							target="_blank"><img class="badge-cert-shield"
 								src="img/badge/azure-developer-associate.png"></a>
-					</div>
-					<div class="col-md-2 col-xs-4">
+					</span>
+					<span >
 						<a title="Azure Fundamentals"
 							href="https://www.credly.com/badges/202cff36-c682-4b81-ab70-7974e259318f"
 							target="_blank"><img class="badge-cert-shield" src="img/badge/azure-fundamentals.png"></a>
-					</div>
-					<div class="col-md-2 col-xs-4">
+					</span>
+					<span >
 						<a title="Programming in C#"
 							href="https://www.credly.com/badges/57613649-97fa-4525-8eb9-6241d6bddb03"
 							target="_blank"><img class="badge-cert-slug" src="img/badge/programming_c_sharp.png"></a>
-					</div>
-					<div class="col-md-2 col-xs-4">
+					</span>
+					<span >
 						<a title="Software Development Fundamentals"
 							href="https://www.credly.com/badges/957a8413-1fa6-4b67-ab12-6888c23d6fb7"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/software-development-fundamentals.png"></a>
-					</div>
-					<div class="col-md-2 col-xs-4">
+					</span>
+					<span>
 						<a title="Microsoft Certified Trainer"
 							href="https://www.credly.com/badges/d3a9c4c0-45df-4d38-a7d2-cc9e96ffe99f"
 							target="_blank"><img class="badge-cert-slug"
 								src="img/badge/MCT-Microsoft_Certified_Trainer-2021-2022.png"></a>
-					</div>
+					</span>
 				</div>
 				<!-- end .cotainer -->
 			</div>
