Updated Azure Certification

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
 					<!-- end .col-md-12 -->
 				</div>
 				<div class="row certification">
+					<span>
+						<a title="Azure Solution Architect Expert"
+							href="https://www.credly.com/badges/c45fcfd8-f553-466d-935c-7ed4ff1a272c"
+							target="_blank"><img class="badge-cert-shield"
+								src="img/badge/azure-solutions-architect-expert.png"></a>
+					</span>
 					<span >
 						<a title="Azure Administrator Associate"
 							href="https://www.credly.com/badges/8b315b60-077f-4a2b-975a-9f0c410acdf3"
