Change opensource project name

--- a/index.html
+++ b/index.html
@@ -357,20 +357,20 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>-ENGAGEMENT ORGANIZER</b>
+									<b>-ORGANIZER</b>
 									<br>
-									<b>Description:</b>Engagement management tool
+									<b>Description:</b>Appointment management tool
 									<br>
 									<b>Technologies:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL
 									Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/Engagement-Organizer"
-										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
+									<a href="https://github.com/liguori/organizer"
+										target="_blank">https://github.com/liguori/organizer</a>
 									<br>
 									<br>
-									<b>-SAVINGS PROJECTION</b>
+									<b>-SAVINGS</b>
 									<br>
 									<b>Description:</b> Project your income into the future while also taking expenses
 									into account
@@ -378,8 +378,8 @@
 									<b>Technologies:</b> Blazor, ASP.NET Core, EF Core and Electron
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/savings-projection"
-										target="_blank">https://github.com/liguori/savings-projection</a>
+									<a href="https://github.com/liguori/savings"
+										target="_blank">https://github.com/liguori/savings</a>
 									<br>
 									<br>
 									<b>-CHESSBOARD PLUS</b>
