--- a/it/index.html
+++ b/it/index.html
@@ -359,20 +359,20 @@
 							</div>
 							<div class="body">
 								<p>
-									<b>-ENGAGEMENT ORGANIZER</b>
+									<b>-ORGANIZER</b>
 									<br>
-									<b>Descrizione:</b>Tool con calendario per la gestione degli ingaggi
+									<b>Descrizione:</b>Tool con calendario per la gestione degli appuntamenti
 									<br>
 									<b>Tecnologie:</b>Angular, TypeScript, ASP.NET Core, C#, Electron, EF Core, SQL
 									Lite, Angular
 									Material
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/Engagement-Organizer"
-										target="_blank">https://github.com/liguori/Engagement-Organizer</a>
+									<a href="https://github.com/liguori/organizer"
+										target="_blank">https://github.com/liguori/organizer</a>
 									<br>
 									<br>
-									<b>-SAVINGS PROJECTION</b>
+									<b>-SAVINGS</b>
 									<br>
 									<b>Descrizione:</b>Proietta le tue entrate nel futuro tenendo conto anche delle
 									spese
@@ -380,8 +380,8 @@
 									<b>Tecnologie:</b>Blazor, ASP.NET Core, EF Core and Electron
 									<br>
 									<b>Url:</b>
-									<a href="https://github.com/liguori/savings-projection"
-										target="_blank">https://github.com/liguori/savings-projection</a>
+									<a href="https://github.com/liguori/savings"
+										target="_blank">https://github.com/liguori/savings</a>
 									<br>
 									<br>
 									<b>-CHESSBOARD PLUS</b>
