--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						<!-- end .logo -->
 						<div class="info">
 							<h2>GIANLUIGI LIGUORI</h2>
-							<h3>APP INNOVATION CUSTOMER ENGINEER @ <span><img class="msft" src="img/microsoft.svg"
+							<h3>CLOUD SOLUTION ARCHITECT @ <span><img class="msft" src="img/microsoft.svg"
 										alt="Microsoft" aria-label="Microsoft logo"></span></h3>
 							Lanuage:
 							<a href="#">ENGLISH</a>&nbsp;|&nbsp;
@@ -330,7 +330,7 @@
 							<div class="title">
 								<h3>2019 - Present</h3>
 								<p>
-									<b>APP INNOVATION CUSTOMER ENGINEER</b>
+									<b>CLOUD SOLUTION ARCHITECT</b>
 									<br><span class="msft">Microsoft</span>
 								</p>
 							</div>
